Fixed an issue caused by renaming item-container to order-container. Trying to fix mobile header, justify-content: right not working as intended. Also clicking off the element has no effect on mobile, but works perfectly fine on firefox desktop.

--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -39,6 +39,7 @@ header{
     right: 0;
     left: 0;
     padding: 1rem;
+    z-index: 1000;
 }
 
 .mobile-menu{
@@ -46,6 +47,12 @@ header{
     background-color: white;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
     border-radius: 0.5rem;
+}
+
+.mobile-exit-button-container{
+    display: flex;
+    justify-content: right;
+    width: 100%;
 }
 
 .mobile-menu-nav{
@@ -152,11 +159,6 @@ header{
 
 .register-button:active{
     background-color: #4c51bf;
-}
-
-.mobile-exit-button-container{
-    display: flex;
-    justify-content: right;
 }
 
 .desktop-menu, .desktop-user-actions{
